--- a/css/styles.css
+++ b/css/styles.css
@@ -16,3 +16,19 @@ body{
 #container h1{
     font-size: 20px;
 }
+#cabecera {
+    background: #33A;
+    color: white;
+    box-shadow: 0px 2px 20px 0px rgba(0, 0,0, 0.5);
+    margin: 0;
+    padding: 0.5em;
+    font-weight: bold;
+}
+#cabecera #tagline{
+    font-weight: normal;
+    font-size: 0.8em;
+    padding: 0 0 0 1em;
+}
+#post {
+    padding: 1em;
+}
