--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body{
     text-align: center;
-    font-family: 'Courier New', Courier;
+    font-family:Arial, Helvetica, sans-serif;
     font-size: 16px;
     color:#333;
     margin:0;
