--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,15 @@
 body{
+    background: #1e1f24;
     text-align: center;
     font-family:Arial, Helvetica, sans-serif;
     font-size: 16px;
-    color:red;
+    color:#333;
     margin:0;
     padding: 0;;
 }
 #container{
     width: 70%;
-    padding: 1em;
+    padding: 0;
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
@@ -24,11 +25,16 @@ body{
     padding: 0.5em;
     font-weight: bold;
 }
+#cabecera #logo {
+    width: 20px;
+    vertical-align: middle;
+}
 #cabecera #tagline{
     font-weight: normal;
     font-size: 0.8em;
     padding: 0 0 0 1em;
 }
 #post {
+    background: white;
     padding: 1em;
 }
